docs/releases/v0.1.2/release-security-residual-risk.md
# Residual Risk Report

- critical findings: `9`

| Classification | Count |
| --- | ---: |
| `upstream_residual` | 9 |

## Critical findings

| Image | Classification | Action | Target | Package | CVE | Installed | Fixed | Upstream release source |
| --- | --- | --- | --- | --- | --- | --- | --- | --- |
| `diagrams` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/d2` | `stdlib` | `CVE-2025-68121` | `v1.24.6` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `terrastruct/d2` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `diagrams` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `java` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `latex` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `latex` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/libexec/polyglot-devcontainers/task-real` | `google.golang.org/grpc` | `CVE-2026-33186` | `v1.76.0` | `1.79.3` | `go-task/task` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `maintainer` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/d2` | `stdlib` | `CVE-2025-68121` | `v1.24.6` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `terrastruct/d2` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `maintainer` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `python-node` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

| `research-runner` | `upstream_residual` | `wait_for_upstream_release` | `usr/local/bin/gitleaks` | `stdlib` | `CVE-2025-68121` | `v1.24.11` | `1.24.13, 1.25.7, 1.26.0-rc.3` | `gitleaks/gitleaks` |

Rationale: Latest upstream-supported release is in use for this managed binary; track the finding and wait for the vendor to publish a refreshed release.

